# bevy_ios_notifications

./: .gitignore  CHANGELOG.md  Package.swift  README.md  justfile
Sources/bevy_ios_notifications/: AppDelegateSwizzler.swift  Data.pb.swift  bevy_ios_notifications.swift
Tests/bevy_ios_notificationsTests/: bevy_ios_notificationsTests.swift
rust/bevy_ios_notifications/: Cargo.toml  build.rs  justfile
rust/bevy_ios_notifications/src/: Data.proto  channel.rs  lib.rs  native.rs  plugin.rs  resource.rs
