[package]
name = "bevy_ios_notifications"
version = "0.5.0"
edition = "2024"
readme = "../../README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_notifications"
repository = "https://github.com/rustunit/bevy_ios_notifications"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin to interact with iOS Notifications API"

[package.metadata.docs.rs]
default-target = "x86_64-apple-ios"

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
builder-pattern = { version = "0.4", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
bevy_channel_message = "0.1"
block2 = "0.5"
prost = "0.12"

[build-dependencies]
prost-build = { version = "0.12" }
